# urgencias-core

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  urgencias-core.toml.example
.github/workflows/: pytest.yml
docs/: decisions.md  index.html  roadmap.md
scripts/: demo_deis.py  demo_synthetic.py  generate_fixture.py  harness_smoke.py
src/urgencias_core/: __init__.py
src/urgencias_core/data/: deis.py  loader.py  timeseries.py
src/urgencias_core/eval/: baselines.py  harness.py
src/urgencias_core/features/: calendar.py  respiratory.py  weather.py
src/urgencias_core/models/: lgb_quantile.py  protocol.py
src/urgencias_core/server/: app.py  charts.py  config.py
src/urgencias_core/server/static/: style.css
src/urgencias_core/server/templates/: base.html  baseline.html  forecast.html  index.html  simulation.html
src/urgencias_core/simulation/: engine.py  los_empirical.py
tests/: conftest.py  test_baselines.py  test_calendar.py  test_deis.py  test_harness.py  test_lgb_quantile.py  test_loader.py  test_los_empirical.py  test_protocol.py  test_respiratory.py  test_server.py  test_simulation_engine.py  test_smoke.py  test_timeseries.py  test_weather.py
tests/fixtures/: deis_demo_snapshot.README.md  deis_demo_snapshot.parquet  synthetic_ed_visits.parquet
