[project]
name = "urgencias-core"
version = "0.0.0"
description = "Reference code for Chilean ED analytics, simulation, and forecasting. Open foundation of Eunosia."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "Nicolás Vera Z." }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "lightgbm>=4.3",
    "statsforecast>=1.7",
    "holidays>=0.50",
    "httpx>=0.27",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
    "matplotlib>=3.8",
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urgencias_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
